[gd_scene load_steps=3 format=2]

[ext_resource path="res://Label Theme.tres" type="Theme" id=1]
[ext_resource path="res://OptionButton.gd" type="Script" id=2]

[node name="SystemSlot" type="PanelContainer"]
margin_bottom = 27.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="SystemSlot" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 76.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="OptionButton" type="OptionButton" parent="SystemSlot"]
margin_right = 6.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "None"
clip_text = true
align = 1
script = ExtResource( 2 )

[node name="CheckButton" type="CheckButton" parent="SystemSlot"]
margin_left = 10.0
margin_right = 74.0
margin_bottom = 32.0
focus_mode = 0
theme = ExtResource( 1 )
pressed = true
enabled_focus_mode = 0
align = 1
icon_align = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="ToolButton" type="SpinBox" parent="Node2D"]
margin_left = -52.0
margin_right = 16.0
margin_bottom = 36.0
theme = ExtResource( 1 )
min_value = -1.0
max_value = 1.0

[connection signal="mouse_entered" from="." to="SystemSlot/OptionButton" method="_on_SystemSlot_mouse_entered"]
[connection signal="item_selected" from="SystemSlot/OptionButton" to="SystemSlot/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="mouse_entered" from="SystemSlot/OptionButton" to="SystemSlot/OptionButton" method="_on_SystemSlot_mouse_entered"]
[connection signal="mouse_entered" from="SystemSlot/CheckButton" to="SystemSlot/OptionButton" method="_on_SystemSlot_mouse_entered"]
[connection signal="mouse_entered" from="Node2D/ToolButton" to="SystemSlot/OptionButton" method="_on_SystemSlot_mouse_entered"]
[connection signal="value_changed" from="Node2D/ToolButton" to="SystemSlot/OptionButton" method="_on_ToolButton_value_changed"]
